--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "foreman": "^2.0.0",
     "request": "^2.75.0"
   }
 }
