--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "foreman": "^2.0.0",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "request-promise-native": "^1.0.5"
   }
 }
