--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "slack-httpstatuscats",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Wanna quickly look up a definition of http status code? Just type /httpstatus slash command! HTTP Status Cats bot responds you with a short description of each status code with the HTTP Status Cats picture. 🐱",
-  "main": "index.js",
   "scripts": {
-    "start": "nf start",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "slack",
-    "slack-bot",
     "bot",
     "httpstatus",
     "cats"
@@ -17,9 +15,11 @@
   "author": "Tomomi ❤ Imura",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "foreman": "^2.0.0",
-    "request": "^2.75.0"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "node-persist": "^3.0.1",
+    "qs": "^6.5.2"
   }
 }
